修改打包文件