@@ -17,12 +17,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>2.7.0</version>
+            <version>2.7.3</version>
         </dependency>
         <dependency>
             <groupId>com.jfoenix</groupId>
             <artifactId>jfoenix</artifactId>
-            <version>8.0.10</version>
+            <version>9.0.10</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -72,5 +72,40 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.github.fvarrui</groupId>
+                <artifactId>javapackager</artifactId>
+                <version>1.6.7</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>package</goal>
+                        </goals>
+                        <configuration>
+                            <!-- mandatory -->
+                            <mainClass>com.it.Demo</mainClass>
+                            <!-- optional -->
+                            <bundleJre>true</bundleJre>
+                            <customizedJre>false</customizedJre>
+                            <generateInstaller>true</generateInstaller>
+                            <administratorRequired>false</administratorRequired>
+                            <platform>mac</platform>
+                            <additionalResources>
+                                <additionalResource>/Users/bertin/Downloads/javafx-sdk-19/lib</additionalResource>
+                            </additionalResources>
+                            <vmArgs> --module-path '../Resources/lib' --add-modules javafx.base,javafx.fxml,javafx.graphics,javafx.controls,javafx.media,javafx.swing,javafx.web,jdk.unsupported.desktop --add-opens java.base/java.lang.reflect=ALL-UNNAMED</vmArgs>
+                            <linuxConfig></linuxConfig>
+                            <macConfig></macConfig>
+                            <winConfig></winConfig>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
